fixed dark mode, could use tweaking but it's working now

--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
 }
 
 :root {
-    --clr-light: #C4BBAF;
+    --clr-light: #ccc;
     --clr-dark: #0A1045;
     --clr-primary: #7d7d7d;
-    --clr-secondary: #6A6262;
+    --clr-secondary: #f6f6f6;
     --clr-accent: #009FFD;
 
     --foreground: var(--clr-light);
@@ -20,12 +20,20 @@
 .darkMode {
     --clr-light: #606470;
     --clr-dark: #353941;
-    --clr-primary: #26282b;
-    --clr-secondary: #6A6262;
+    --clr-primary: #acacac;
+    --clr-secondary: #26282b;
     --clr-accent: #3b50d2;
 
     --foreground: var(--clr-light);
     --background: var(--clr-dark);
+}
+
+body {
+    background-color: var(--clr-secondary);
+}
+
+.darkMode body {
+    background-color: var(--clr-primary);
 }
 
 .dark-mode-toggle {
@@ -44,7 +52,7 @@
 
 }
 
-header {
+.header {
     padding: 30px;
     background-color: var(--clr-primary);
     color: var(--clr-dark);
@@ -52,7 +60,7 @@ header {
     border-bottom: 1px solid var(--clr-light);
 }
 
-.darkMode header.header {
+.darkMode .header {
     background: var(--clr-primary);
     border-bottom: 1px solid var(--clr-light);
     color: var(--clr-dark);
@@ -74,7 +82,7 @@ a#refreshPage {
 }
 
 .darkMode #myTunes {
-    color: white;
+    color: var(--clr-secondary);
 }
 
 #totally {
@@ -85,7 +93,7 @@ a#refreshPage {
 }
 
 .darkMode #totally {
-    color: white;
+    color: var(--clr-secondary);
 }
 
 #darkModeSwitch {
@@ -100,7 +108,7 @@ a#refreshPage {
 }
 
 .darkMode #dynamicContainer {
-    background-color: var(--clr-primary);
+    background-color: var(--clr-secondary);
 }
 
 #currentSongBox {
@@ -108,6 +116,21 @@ a#refreshPage {
     box-shadow: 3px 3px 5px #00000020,
     -3px -3px 5px #ffffff;
     background: linear-gradient(140deg, rgba(255, 0, 0, 0), rgba(0, 0, 0, 0.1));
+    border-radius: 5%;
+    width: 50%;
+    padding: 2%;
+    margin: 2px;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.darkMode #currentSongBox {
+    border: 1px solid rgba(172, 172, 172, 1);
+    box-shadow: 3px 3px 5px rgba(230, 230, 230, .6),
+                -3px -3px 5px rgba(102, 102, 102, .6);
+    background: linear-gradient(140deg, rgba(242, 242, 242, 0.8), 
+                                        rgba(153, 153, 153, 0.9));
     border-radius: 5%;
     width: 50%;
     padding: 2%;
@@ -126,11 +149,10 @@ a#refreshPage {
 } */
 
 #currentSongImgContainer { 
+    border: 2px solid blue; 
     width: 80px;
     height: 80px;
     border-radius: 15%;
-    box-shadow: 3px 3px 5px #00000020,
-                -3px -3px 5px #ffffff;
 }
 
 #currentSongImg {
@@ -140,6 +162,14 @@ a#refreshPage {
     margin-right: 10px; 
     box-shadow: 3px 3px 5px #00000020,
                 -3px -3px 5px #ffffff;
+}
+
+.darkMode #currentSongImg { 
+    width: 80px;
+    height: 80px;
+    border-radius: 15%;
+    box-shadow: 3px 3px 5px rgba(230, 230, 230, .6),
+                -3px -3px 5px rgba(102, 102, 102, .6);
 }
 
 #currentSongInfo {
@@ -190,7 +220,7 @@ a#refreshPage {
     font-size: 16px;
     border: 2px solid #ccc;
     border-radius: 20px;  
-    background-color: #fff;
+    background-color: var(--clr-primary);
     outline: none;
 }
 
@@ -204,7 +234,7 @@ form {
 }
 
 .darkMode form {
-    background-color: var(--clr-primary);
+    background-color: var(--clr-secondary);
 }
 
 #searchContainer {
@@ -213,7 +243,7 @@ form {
 }
 
 .darkMode #searchContainer {
-    background-color: var(--clr-primary);
+    background-color: var(--clr-secondary);
     border-top: 1px solid var(--clr-light);
 }
 
@@ -222,8 +252,9 @@ form {
     height: 40px; 
     padding: 10px;
     font-size: 16px;
-    border: 2px solid #ccc;
+    border: 2px solid var(--clr-light);
     border-radius: 20px; 
+    background-color: var(--clr-secondary);
 }
 
 #searchButton {
@@ -273,11 +304,11 @@ form {
 
 .darkMode #searchResults {
     border-top: 1px solid var(--clr-light);
-    background-color: var(--clr-primary);
+    background-color: var(--clr-secondary);
 }
 
 .darkMode #resultsContainer {
-    background-color: var(--clr-primary);
+    background-color: var(--clr-secondary);
 }
 
 .songBox {
@@ -285,6 +316,20 @@ form {
     box-shadow: 3px 3px 5px #00000020,
                 -3px -3px 5px #ffffff;
     background: linear-gradient(140deg, rgba(255, 0, 0, 0), rgba(0, 0, 0, 0.1));           
+    display: column;
+    justify-content: center;
+    border-radius: 5%; 
+    width: 20%;
+    padding: 2%; 
+    margin: 2px; 
+}
+
+.darkMode .songBox {
+    border: 1px solid lightgrey;
+    box-shadow: 3px 3px 5px rgba(230, 230, 230, .6),
+                -3px -3px 5px rgba(102, 102, 102, .6);
+    background: linear-gradient(140deg, rgba(242, 242, 242, 0.8), 
+                                        rgba(153, 153, 153, 0.9));           
     display: column;
     justify-content: center;
     border-radius: 5%; 
@@ -316,9 +361,18 @@ form {
                 -3px -3px 5px #ffffff;
 }
 
+.darkMode .image {
+    margin: 0; 
+    border-radius: 5%;
+    box-shadow: 3px 3px 5px rgba(230, 230, 230, .6),
+                -3px -3px 5px rgba(102, 102, 102, .6);
+}
+
 .imageBox {
     margin: 0;
     border-radius: 5%; 
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
